# invideo-assignment-one

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  fly.toml
assets/styling/: evaluator.css  home.css  shader.css
src/: backend.rs  main.rs
src/components/: evaluator.rs  mod.rs  navbar.rs
src/views/: calculator.rs  home.rs  mod.rs  shader.rs
